--- a/index.html
+++ b/index.html
@@ -10,25 +10,32 @@
   <body>
     <!-- overlay -->
     <div class="overlay" id="overlay">
+      <!-- menu Items -->
       <nav>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li id="nav-1"><a href="#home">Home</a></li>
+          <li id="nav-2"><a href="#about">About</a></li>
+          <li id="nav-3"><a href="#skills">Skills</a></li>
+          <li id="nav-4"><a href="#projects">Projects</a></li>
+          <li id="nav-5"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
+    <!-- menu bar -->
+    <div class="menu-bars" id="menu-bars">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
     <!-- Sections -->
     <section id="home">
-      <a href="https://jacinto.design" target="_blank">Jacinto Design</a>
+      <a href="https://yusuf-portfolio.netlify.app/" target="_blank">Yusuf Design</a>
     </section>
     <section id="about"><h1>Learn More About Me</h1></section>
     <section id="skills"><h1>These Are My Strengths</h1></section>
     <section id="projects"><h1>These Are My Results</h1></section>
     <section id="contact"><h1>Available Anytime</h1></section>
-    
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
