--- a/index.html
+++ b/index.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animated Navigation</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- overlay -->
-    <div class="overlay overlay-slide-left" id="overlay">
-      <!-- menu Items -->
-      <nav>
-        <ul>
-          <li id="nav-1" class="slide-out-1"><a href="#home">Home</a></li>
-          <li id="nav-2" class="slide-out-2"><a href="#about">About</a></li>
-          <li id="nav-3" class="slide-out-3"><a href="#skills">Skills</a></li>
-          <li id="nav-4" class="slide-out-4"><a href="#projects">Projects</a></li>
-          <li id="nav-5" class="slide-out-5"><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-    <!-- menu bar -->
-    <div class="menu-bars" id="menu-bars">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-    </div>
-    <!-- Sections -->
-    <section id="home">
-      <a href="https://yusuf-portfolio.netlify.app/" target="_blank">M.Y Design</a>
-    </section>
-    <section id="about"><h1>Learn More About Me</h1></section>
-    <section id="skills"><h1>These Are My Strengths</h1></section>
-    <section id="projects"><h1>These Are My Results</h1></section>
-    <section id="contact"><h1>Available Anytime</h1></section>
 
-    <!-- Script -->
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Animated Navigation</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- overlay -->
+  <div class="overlay overlay-slide-left" id="overlay">
+    <!-- menu Items -->
+    <nav>
+      <ul>
+        <li id="nav-1" class="slide-out-1"><a href="#home">Home</a></li>
+        <li id="nav-2" class="slide-out-2"><a href="#about">About</a></li>
+        <li id="nav-3" class="slide-out-3"><a href="#skills">Skills</a></li>
+        <li id="nav-4" class="slide-out-4"><a href="#projects">Projects</a></li>
+        <li id="nav-5" class="slide-out-5"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+  <!-- menu bar -->
+  <div class="menu-bars" id="menu-bars">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div>
+  <!-- Sections -->
+  <section id="home">
+    <a href="https://yusuf-portfolio.netlify.app/" target="_blank">M.Y Design</a>
+  </section>
+  <section id="about">
+    <h1>Hi, this is just a Design project,to show case my design concepts <br>and how I create user Interface... <br>Technologies been used are<br>
+      JAVASCRIPT <br>
+      HTML<br>CSS
+      </h1>
+  </section>
+  <section id="skills">
+    <h1> you can click the button below to see project source and all the technologies I have<br> and more projects sources by visiting my account on git hub
+      <a class="github-ancher" href="https://github.com/yusuf963" target="_blank">click here</a>
+    </h1>
+    
+  </section>
+  <section id="projects">
+    <h1>Hi again, see the projects in my portfolio</h1>
+  </section>
+  <section id="contact">
+    <a href="https://github.com/yusuf963" target="_blank">git hub</a>
+    <a href="" target="_blank">twitter</a>
+    <a href="https://www.linkedin.com/in/yusuf-musa/" target="_blank">linkedin</a>
+  </section>
+
+  <!-- Script -->
+  <script src="script.js"></script>
+</body>
+
 </html>
